--- a/css/components/attribution.css
+++ b/css/components/attribution.css
@@ -1,11 +1,6 @@
-.attribution {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 1em; /* space around all description box */
-}
+.info-container {
+    width: auto;
+    height: auto;
 
-.attribution h1 {
-    font-weight: bold;
-    margin: 0 0 0.25em; /* space bellow title */
+    padding: 1%;
 }
