--- a/css/containers/body.css
+++ b/css/containers/body.css
@@ -1,6 +1,4 @@
 body {
-    margin: 1em; /* space distance all around webpage components */
-    padding: 0;
-    font-family: Google Sans, Noto, Roboto, Helvetica Neue, sans-serif;
-    color: #244376;
+    margin: 1em;
+    background-color: var(--color-second);
 }
