Started unified website
Index displays a list of already built 3D model projects from Holotech, soon this list will be show like in a catalog. Now Holotech logo on each individual project has a link to the main page.

Also on index page you can now track dev workers and see what they are spending their times on.

--- a/css/components/text-wrapper.css
+++ b/css/components/text-wrapper.css
@@ -1,9 +1,23 @@
 .text-wrapper h1 {
     font-weight: bold;
-    margin: 0 0 0.25em;
+    margin: 0 0 1em;
 }
 
 .text-wrapper {
-    float: left;
-    margin: 10px 0 0 0; /* distance to image */
+    margin: 10px 0 0 0;
+    display: inline-block;
+}
+
+.content-title {
+    font-size: large;
+    font-weight: bold;
+
+    margin: 0 0 1em;
+
+    text-align: center;
+}
+
+.content-link > a {
+    text-decoration: none;
+    color: var(--color-first);
 }
