--- a/css/settings/color.css
+++ b/css/settings/color.css
@@ -1,5 +1,5 @@
 :root {
-    --color-first: #333D79FF;
+    --color-first: rgb(9, 32, 160);
     --color-first-light: #70BCD1;
 
     --color-second: #FAEBEFFF;
